@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.18 2007-10-04 10:11:32 nicm Exp $
+# $Id: Makefile,v 1.19 2007-10-04 10:39:06 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean
@@ -22,7 +22,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       key-bindings.c cmd.c cmd-new-session.c cmd-detach-session.c \
       cmd-list-sessions.c cmd-new-window.c cmd-next-window.c cmd-bind-key.c \
       cmd-unbind-key.c cmd-previous-window.c cmd-last-window.c cmd-list-keys.c \
-      cmd-set-option.c
+      cmd-set-option.c cmd-rename-window.c
 
 YACC= yacc -d
 
