@@ -1,4 +1,4 @@
-/* $Id: tmux.h,v 1.43 2007-10-04 10:11:32 nicm Exp $ */
+/* $Id: tmux.h,v 1.44 2007-10-04 10:39:07 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -466,6 +466,7 @@ enum cmd_type {
 	CMD_NEWWINDOW,
 	CMD_NEXTWINDOW,
 	CMD_PREVIOUSWINDOW,
+	CMD_RENAMEWINDOW,
 	CMD_SETOPTION,
 	CMD_UNBINDKEY,
 };
@@ -539,6 +540,7 @@ extern const struct cmd_entry cmd_new_session_entry;
 extern const struct cmd_entry cmd_new_window_entry;
 extern const struct cmd_entry cmd_next_window_entry;
 extern const struct cmd_entry cmd_previous_window_entry;
+extern const struct cmd_entry cmd_rename_window_entry;
 extern const struct cmd_entry cmd_set_option_entry;
 extern const struct cmd_entry cmd_unbind_key_entry;
 
